# aichat-history

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  claudecode_sesh_that_made_this.txt  pyproject.toml
src/aichat_history/: __init__.py  __main__.py  cli.py  config.py  core.py  export.py  provider.py  server.py
src/aichat_history/backends/: __init__.py  claude_code.py  cursor.py  opencode.py
src/aichat_history/static/: index.html
tests/: conftest.py  test_claude_code.py  test_cursor.py  test_export.py  test_opencode.py  test_server.py
