[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aichat-history"
version = "0.1.0"
description = "Browse AI coding chat history from Cursor, Claude Code, and OpenCode in one place"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.25.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
aichat-history = "aichat_history.cli:main"
